Updated script links

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-  <script src="/js/carApp.js"></script>
-  <script src="/js/carController.js"></script>
-  <link rel="stylesheet" type="text/css" href="/css/carStyle.css">
+  <script src="js/carApp.js"></script>
+  <script src="js/carController.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/carStyle.css">
 </head>
 
 <body ng-app="carApp">
